test/process/error/undefined-operator.bpp
input x, y
  p = x ~!~ y
  q = x +!+ y
output p
